[gd_scene load_steps=12 format=3 uid="uid://b5avpntvw8ny6"]

[ext_resource type="Script" path="res://scene/ants/soldier_ant.gd" id="1_ynhu8"]
[ext_resource type="PackedScene" uid="uid://cis6m2sus0kvh" path="res://components/health_component.tscn" id="2_fbeis"]
[ext_resource type="Texture2D" uid="uid://bicbemqy4th4v" path="res://addons/kenney_input_prompts/Nintendo Switch/Double/switch_button_minus_outline.png" id="2_vb1dm"]
[ext_resource type="PackedScene" uid="uid://t4uyo56vutjx" path="res://components/hitbox_component.tscn" id="3_5r5ae"]
[ext_resource type="PackedScene" uid="uid://cw8fpra043ulj" path="res://components/attack_component.tscn" id="5_2k6ks"]
[ext_resource type="Script" path="res://components/attack.gd" id="6_dxphb"]
[ext_resource type="PackedScene" uid="uid://v5115d4bpn2k" path="res://components/outline_component.tscn" id="8_f4n6d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6a7x7"]
radius = 74.7

[sub_resource type="CircleShape2D" id="CircleShape2D_mrwpu"]
radius = 48.79

[sub_resource type="CircleShape2D" id="CircleShape2D_qpmsm"]
radius = 45.19

[sub_resource type="CircleShape2D" id="CircleShape2D_cm0yp"]
radius = 32.01

[node name="Soldier" type="CharacterBody2D" node_paths=PackedStringArray("outline_component") groups=["ant"]]
unique_name_in_owner = true
scale = Vector2(0.2, 0.2)
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_ynhu8")
move_speed = 75.0
patrol_range = 100.0
outline_component = NodePath("OutlineComponent")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
path_postprocessing = 1
neighbor_distance = 100.0
max_neighbors = 3

[node name="Reach" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_mask = 2
monitorable = false

[node name="ReachShape" type="CollisionShape2D" parent="Reach"]
shape = SubResource("CircleShape2D_6a7x7")
debug_color = Color(0.0901961, 0.654902, 0.462745, 0.419608)
metadata/_edit_lock_ = true

[node name="Vision" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
rotation = 1.57079
monitorable = false
metadata/_edit_lock_ = true

[node name="VisionShape" type="CollisionPolygon2D" parent="Vision"]
polygon = PackedVector2Array(-120.001, 159.999, -639.992, -1280, 640.008, -1280, 119.999, 160.001)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.57079
texture = ExtResource("2_vb1dm")

[node name="SoldierShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_mrwpu")

[node name="HealthComponent" parent="." instance=ExtResource("2_fbeis")]
visible = false

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "parent_body") instance=ExtResource("3_5r5ae")]
visible = false
health_component = NodePath("../HealthComponent")
parent_body = NodePath("..")

[node name="HitboxShape" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_qpmsm")
debug_color = Color(0.894118, 0, 0, 0.337255)

[node name="AttackComponent" parent="." node_paths=PackedStringArray("attack", "hitbox_shape", "parent_body") instance=ExtResource("5_2k6ks")]
visible = false
attack = NodePath("Attack")
hitbox_shape = NodePath("AttackShape")
parent_body = NodePath("..")

[node name="AttackShape" type="CollisionShape2D" parent="AttackComponent"]
position = Vector2(80, 0)
shape = SubResource("CircleShape2D_cm0yp")
debug_color = Color(0.998452, 3.77345e-05, 0.711773, 0.42)

[node name="Attack" type="Node" parent="AttackComponent"]
script = ExtResource("6_dxphb")
attack_damage = 5.0

[node name="OutlineComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("8_f4n6d")]
unique_name_in_owner = true
sprite = NodePath("../Sprite2D")

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="area_shape_entered" from="Reach" to="." method="_on_reach_area_shape_entered"]
[connection signal="body_entered" from="Reach" to="." method="_on_reach_body_entered"]
[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_vision_body_exited"]
